cmake_minimum_required(VERSION 3.31)
project(Session2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Session2
        PTIT_CNTT2_IT201_Session02_Bai01.c
        PTIT_CNTT2_IT201_Session02_Bai02.c
        PTIT_CNTT2_IT201_Session02_Bai03.c
        PTIT_CNTT2_IT201_Session02_Bai04.c
        PTIT_CNTT2_IT201_Session02_Bai05.c
        PTIT_CNTT2_IT201_Session02_Bai06.c
        PTIT_CNTT2_IT201_Session02_Bai07.c
        PTIT_CNTT2_IT201_Session02_Bai08.c
)
